[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources_bar/resources_bar.png" type="Texture" id=1]
[ext_resource path="res://fonts/ARIAL.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://resources_bar/resources_bar.gd" type="Script" id=3]
[ext_resource path="res://global_graphics/game_theme.tres" type="Theme" id=4]

[sub_resource type="DynamicFont" id=1]
size = 19
use_mipmaps = true
font_data = ExtResource( 2 )

[node name="ResourcesBar" type="MarginContainer"]
margin_right = 1408.0
margin_bottom = 80.0
theme = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" type="TextureRect" parent="."]
margin_right = 1408.0
margin_bottom = 80.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1408.0
margin_bottom = 80.0

[node name="LabelContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1408.0
margin_bottom = 80.0

[node name="CosmicCreditsLabel" type="RichTextLabel" parent="MarginContainer/LabelContainer"]
margin_right = 152.0
margin_bottom = 80.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 1 )
text = "Cosmic Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CosmicCreditsValue" type="RichTextLabel" parent="MarginContainer/LabelContainer"]
margin_left = 156.0
margin_right = 308.0
margin_bottom = 80.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarDustLabel" type="RichTextLabel" parent="MarginContainer/LabelContainer"]
margin_left = 312.0
margin_right = 464.0
margin_bottom = 80.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 1 )
text = "Star Dust"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarDustValue" type="RichTextLabel" parent="MarginContainer/LabelContainer"]
margin_left = 468.0
margin_right = 620.0
margin_bottom = 80.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourcesLabel" type="RichTextLabel" parent="MarginContainer/LabelContainer"]
margin_left = 624.0
margin_right = 776.0
margin_bottom = 80.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 1 )
text = "Resources will be shown here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="RichTextLabel" parent="MarginContainer/LabelContainer"]
margin_left = 780.0
margin_right = 932.0
margin_bottom = 80.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 1 )
text = "Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelValue" type="RichTextLabel" parent="MarginContainer/LabelContainer"]
margin_left = 936.0
margin_right = 1088.0
margin_bottom = 80.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XPBar" type="RichTextLabel" parent="MarginContainer/LabelContainer"]
margin_left = 1092.0
margin_right = 1244.0
margin_bottom = 80.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 1 )
text = "XP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XPValue" type="RichTextLabel" parent="MarginContainer/LabelContainer"]
margin_left = 1248.0
margin_right = 1408.0
margin_bottom = 80.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}
